--- a/app/src/main/res/layout/activity_send.xml
+++ b/app/src/main/res/layout/activity_send.xml
@@ -6,6 +6,11 @@
     android:layout_height="wrap_content"
     tools:context="com.example.maxi.tpoperativa.SendActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"></LinearLayout>
+
     <TextView
         android:id="@+id/id_destino"
         android:layout_width="80dp"
