actualizacion de paquetes (activity)
Done

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -118,6 +118,7 @@
                             android:ems="10"
                             android:inputType="textPersonName"
                             android:text="Website" />
+
                         <Button
                             android:id="@+id/btnFinalizar"
                             style="?android:textAppearanceSmall"
@@ -126,9 +127,8 @@
                             android:layout_marginTop="16dp"
                             android:background="@color/colorAccent"
                             android:text="Finalizar"
-                            android:textSize="20dp"
-                            android:textColor="@android:color/background_light"
-                            />
+                            android:textColor="@android:color/darker_gray"
+                            android:textSize="20dp" />
 
 
 
