Cambios a  cantidades flotantes

--- a/app/src/main/res/layout/activity_peticion.xml
+++ b/app/src/main/res/layout/activity_peticion.xml
@@ -43,7 +43,6 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="20dp"
-                android:background="@android:color/white"
                 android:ems="10"
                 android:hint="Cantidad"
                 android:inputType="number"
@@ -54,6 +53,9 @@
                 android:id="@+id/solicitar_Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
                 android:text="Solicitar"
                 tools:layout_editor_absoluteX="0dp"
                 tools:layout_editor_absoluteY="254dp" />
